Drawing from deck (and a lot of bugs uncovered by it)

--- a/web-client/styles.css
+++ b/web-client/styles.css
@@ -6,8 +6,7 @@ main {
 
 #gameLog {
     grid-column: 2;
-    grid-row: 2 / span 2;
-    max-height: 12em;
+    grid-row: 2;
     overflow-y: scroll;
 }
 
